# pagan-lab-to-nwb

./: .gitignore  CLAUDE.md  README.md  conversion_errors_TaskSwitch6.txt  conversion_errors_all_protocols.txt  email_from_szonja.txt  install_into_conda_env.sh  make_env.yml  output_dir  pyproject.spyglass.toml  pyproject.toml
.github/workflows/: auto-publish.yml
marino/: list_files.sh  make_rat_info.py  spyglass_setup.ipynb
src/pagan_lab_to_nwb/arc_behavior/: convert_all_sessions.py  convert_all_sessions_any_protocol.py  convert_and_upload_batched.py  convert_session.py  convert_session_any_protocol.py  convert_session_marino.py  metadata.yaml  notes.md  rat_information.xlsx  task_switch6_params.yaml
src/pagan_lab_to_nwb/arc_behavior/documentation/: README.md  conversion_issues.md  conversion_progress.md  data_manifest.md  nwbinspector_report.md
src/pagan_lab_to_nwb/arc_behavior/utils/: utils.py
src/pagan_lab_to_nwb/interfaces/: README.md  __init__.py  _optogenetics.py  _stimulus.py  _task_recording.py  _trials.py  bcontroldatainterface.py
src/pagan_lab_to_nwb/tutorials/: arc_behavior_dandi_demo_notebook.ipynb  arc_behavior_example_notebook.ipynb  arc_behavior_optogenetics_notebook.ipynb  protocol_comparison_notebook.ipynb
