[project]
name = "pagan-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Pagan conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  # DANDI dependencies (data upload)
  "dandi>=0.74.3",

  # Core NWB dependencies
  "neuroconv==0.9.3",
  "nwbinspector==0.7.1",

  # NWB extensions
  "ndx-franklab-novela==0.2.4",
  "ndx-optogenetics==0.3.0",
  "ndx-structured-behavior @ git+https://github.com/rly/ndx-structured-behavior.git@main",

  # Data handling
  "pymatreader>=1.2.0",
  "openpyxl>=3.0.0",
  "tqdm>=4.0.0",
  "pandas>=1.5.0",
]

[project.optional-dependencies]
arc_behavior = []
arc_ecephys = []

[project.urls]
Repository = "https://github.com/catalystneuro/pagan-lab-to-nwb"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["pagan_lab_to_nwb"]

[tool.codespell]
skip = '.git*,*.pdf,*.css'
check-hidden = true
ignore-words-list = 'assertin'

[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
]
fixable = ["ALL"]


[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["neuroconv"]
